--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <link href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous">
     <title>Samir Quiz Yard</title>
 </head>
@@ -10,6 +11,10 @@
     <div class="container">
         <div class="header">
             <div class="col-lg-12">
+                <p class="hText">
+                    Welcome to Squiz Yard<br>
+                    The place for the bright minded
+                </p>
 
             </div>
         </div>
