Function show quiz started

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <div class="content">
                 
                 <button type="button" id="start">START</button>
-                <div class="quiz-container" id="qContainer" style= "display: none;"></div>
+                <div class="quiz-container" id="qContainer" ></div>
             </div>
             <div class="timer"></div>
         </div>
