still working on it

--- a/index.html
+++ b/index.html
@@ -34,9 +34,11 @@
 
                 </div>
             </div>
-            <div class = "result">
-                <p id="score"></p>
+            
+            <div class = "result" id="result"> 
+                <br>
             </div>
+            <div class="score" id="score"></div>
             <div class="timer"></div>
         </div>
         <div class="footer">
